--- a/style.css
+++ b/style.css
@@ -42,3 +42,14 @@ h4
     display: inline-block;
     width: 45%;
 }
+
+.copy_right_footer
+{
+    position: fixed;
+    color: white;
+    bottom: 0;
+    width: 100%;
+    background-color: gray;
+    line-height: 3;
+    text-align: center;
+}
