--- a/style.css
+++ b/style.css
@@ -1,55 +1,44 @@
+
 .heading
 {
-    width: 100%;
-    text-align: left;
+width: 100%;
+text-align: left;
 }
-
-.heading h3
-{
+.heading h3{
     display: inline;
 }
 
-.heading button
-{
+.heading button{
     float: right;
     border: 1px solid white;
 }
 
-.big_image
+#start ,#status, #restart
 {
-    width: 100%;
+font-size: 22px;
 }
 
-#start ,#status
+.modal-dialog
 {
-    font-size: 22px;
+    width: 70%;
+}
+
+.modal-body
+{
+    text-align: left;
+    font-size: 20px;
 }
 
 h4
 {
-    background-color: #f5f5f5;
-    line-height: 2;
-    margin: 0px;
+   background-color: grey;
+   color:white;
+   line-height: 2;
 }
 
-.model-dailog
+canvas 
 {
-    width: 90%;
-}
-
-.instuction_image
-{
-    display: inline-block;
-    width: 45%;
-}
-
-.copy_right_footer
-{
-    position: fixed;
-    color: white;
-    bottom: 0;
-    width: 100%;
-    background-color: gray;
-    line-height: 3;
-    text-align: center;
+    border:3px solid white;
+    border-radius: 20px;
+    box-shadow:  5px 5px 5px white;
 }
